--- a/second.html
+++ b/second.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
 		<meta name="viewpoint" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 		<title>My website</title>
 		<link href="style.css" rel="stylesheet">
+		</head>
 	<body class="second-page">
 		<h1>Who is the most relatible in friends?</h1>
 		<div>
@@ -14,7 +15,7 @@
 		</div>
 		<div class=nav>
 			<a href="Third.html">Page Three</a>
-			<a href="index.html">Page One</a>s
+			<a href="index.html">Page One</a>
 		</div>
 	</body>
 </html>
