--- a/third.html
+++ b/third.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
-		<meta name="viewpoint" content="width=device-width, initial-scale=1">
+	<head>
+		<meta name="viewpoint" scontent="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 		<title>My website</title>
 		<link href="style.css" rel="stylesheet">
+		</head>
 	<body class="third-page">
 		<h1>Who is my favorite character in friends?</h1>
 			<p> 
