--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
 		<link href="style.css" rel="stylesheet">
 		</head>
 	<body class="second-page">
-		<h1>Who is the most relatible in friends?</h1>
+		<h1>Who is the most relatable in friends?</h1>
 		<div>
 			<img src="images/wedding.jpg" alt="Monica and Chandler on their wedding day" class="center">
 			<p> In my opinion, personality wise, I relate to Monica Geller. She is competitive, fun, had goals and had a vision of having a family. She is a character who always knew what she wanted, even when she lost her job, she kept trying; finding the job of her dreams. She fell in love and started the family she dreamed for. I can be quite competitive, and I love playing games and just having fun. A big trait about Monica that everyone else in the game hates is her OCD. I personally don’t care for things to be spotless, BUT I do want things a certain way, and certain things must be spotless. I am also really picky on how I like things, this can be anything from shopping, to my food. For example, I hate syrup on pancakes, I hate sauces or stew on my rice, I must have ketchup or sweet and sour sauce on the side of my fries, weird foods can’t touch and honestly the list goes on. Ive had a couple friends say i relate to monica as well because im annoying.
